# fusefable

./: .gitignore  LICENSE  README.md  README.th.md  pyproject.toml  sync_copies.py
.github/workflows/: ci.yml  publish.yml
desktop_build/: README.md  backend_entry.py  build_desktop.py  build_exe.py  fusefable_gui.py  render_fusefable_icon.py
desktop_build/electron/: main.js  package-lock.json  package.json  preload.js
desktop_build/electron/renderer/: app.js  cursor.css  index.html
desktop_build/fusefable/: cache.py  cli.py  config.py  desktop.py  edits.py  history.py  mcp_server.py  wizard.py
desktop_build/fusefable/providers/: anthropic.py  base.py  google.py  openai_compat.py
docs/superpowers/plans/: 2026-06-18-fuse-fable.md
docs/superpowers/specs/: 2026-06-18-fuse-fable-design.md
fusefable/: cache.py  cli.py  client.py  config.py  core.py  cost.py  desktop.py  ensemble.py  fanout.py  fusion.py  mcp_server.py  models.py  routing.py  web.py  wizard.py
fusefable/providers/: openai_compat.py
mcp_tool/: README.md  TOOLS.md  mcp-config.example.json  run_mcp.py
mcp_tool/fusefable/: compressor.py  core.py  desktop_server.py  ensemble.py  fanout.py  fusion.py  judge.py  project.py  routing.py  web.py
mcp_tool/fusefable/providers/: factory.py
tests/: test_cache.py  test_cli.py  test_client.py  test_compressor.py  test_config.py  test_core.py  test_cost.py  test_desktop.py  test_desktop_server.py  test_edits.py  test_ensemble.py  test_fanout.py  test_fusion.py  test_history.py  test_judge.py  test_mcp_server.py  test_models.py  test_native_providers.py  test_openai_compat.py  test_project.py  test_routing.py  test_web.py  test_wizard.py
