[project]
name = "fusefable"
version = "0.3.1"
description = "Fuse multiple AI models and judge the best answer for coding"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "proultrax9" }]
keywords = ["llm", "ai", "openrouter", "cli", "mcp", "fusion", "coding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/proultrax9/fusefable"
Repository = "https://github.com/proultrax9/fusefable"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]
mcp = ["mcp>=1.2"]

[project.scripts]
fusefable = "fusefable.cli:app"
ff = "fusefable.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fusefable*"]
