[project]
name = "fusefable"
version = "0.5.1"
description = "Fuse multiple AI models and judge the best answer for coding"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "proultrax9" }]
keywords = ["llm", "ai", "openrouter", "cli", "mcp", "fusion", "coding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/proultrax9/fusefable"
Repository = "https://github.com/proultrax9/fusefable"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.6"]
mcp = ["mcp>=1.2"]
app = ["pywebview>=5"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

[project.scripts]
fusefable = "fusefable.cli:app"
ff = "fusefable.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fusefable*"]
